Fix P0/P1 code review findings across all modules
kramer core (Kramer-3pg):
- Guard FocusController keyboard handlers against null current
- Guard AutoLayout.autoLayout() against null layout after failed measure
- Replace getAsDouble() with orElse(0.0) on empty streams in RelationLayout
- Guard NestedTable.activate/setFocus against null rows in measurement mode
- Guard isFirst/isLast/justifyColumn against empty children list

kramer core (Kramer-t6v):
- Remove 5 System.out.println debug statements from FocusTraversalNode

explorer (Kramer-1g3):
- Fix String == to Objects.equals() in AutoLayoutController data guard
- Fix SchemaView.rebuild() child accumulation: add() → setAll()

explorer (Kramer-t6v):
- Replace e.printStackTrace() with log.error()
- Replace deprecated new URL().toURI() with new URI()

toy-app (Kramer-vei):
- Fix path traversal bug: advance node through each segment
- Guard Page.getRoute() against null routing map
- Add Objects.requireNonNull for root page config validation

toy-app (Kramer-t6v):
- Fix SLF4J format string: %s → {}
- Replace Stack with ArrayDeque